syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.hyperchain.protos";
option java_outer_classname = "ContractProto";

service Contract {
    //used tp execute contract method remotely
    rpc Execute (Request) returns (Response) {}
    //used to detect the health state of contract
    rpc HeartBeat(Request) returns (Response) {}
    //used to transfer data between hyperchain and contract
}

service Ledger {
    rpc Get(Key) returns (Value) {}
    rpc Put(KeyValue) returns(Response) {}
}

message Key {
    LedgerContext context = 1;
    bytes k = 2;
}

message Value{
    string id = 1;
    bytes v   =2;
}

message KeyValue {
    LedgerContext context = 1;
    bytes k = 2;
    bytes v = 3;
}

message Request {
    RequestContext context = 1;
    string method = 2;
    repeated bytes args = 3;
}

message LedgerContext {
    string txid   = 1;
    string namespace = 2;
    string cid = 3;
}

message RequestContext {
    string txid   = 1;
    string namespace = 2;
    string cid = 3;
}

message Response {
    bool  ok     = 1;
    bytes result = 2;
    string codeHash = 3;
}
